--- a/kexcellent-back-code/pom.xml
+++ b/kexcellent-back-code/pom.xml
@@ -14,9 +14,50 @@
     <packaging>jar</packaging>
     <name>kexcellent-back-code</name>
 
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>top.kdla.framework</groupId>
+            <artifactId>kdla-common</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>top.kdla.framework</groupId>
+            <artifactId>kdla-dal</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>top.kdla.framework</groupId>
+            <artifactId>kdla-domain</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>top.kdla.framework</groupId>
+            <artifactId>kdla-model</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>top.kdla.framework</groupId>
+            <artifactId>kdla-exception</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>top.kdla.framework</groupId>
+            <artifactId>kdla-supplement</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>top.kdla.framework</groupId>
+            <artifactId>kdla-validator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.lmax</groupId>
+            <artifactId>disruptor</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 </project>
