--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,12 @@
     <description>${project.artifactId}</description>
     <!--<url>http://www.51metaverse.top</url>-->
 
+    <parent>
+        <groupId>top.kdla.framework</groupId>
+        <artifactId>kdla</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -19,6 +25,9 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <java.version>1.8</java.version>
         <kdla.framework.version>1.0.0-SNAPSHOT</kdla.framework.version>
+        <jpinyin.version>1.1.3</jpinyin.version>
+        <disruptor.version>3.4.2</disruptor.version>
+        <junit.version>4.13.1</junit.version>
     </properties>
 
     <distributionManagement>
@@ -111,7 +120,12 @@
             <!-- kdla组件 end -->
 
             <!-- spring-boot-starter -->
-
+            <!--MongoDB -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-mongodb</artifactId>
+                <version>${spring.boot.version}</version>
+            </dependency>
 
             <!-- 日志 -->
 
@@ -121,15 +135,21 @@
             <dependency>
                 <groupId>com.lmax</groupId>
                 <artifactId>disruptor</artifactId>
-                <version>3.4.2</version>
+                <version>${disruptor.version}</version>
             </dependency>
 
+            <!--汉字转拼音-->
+            <dependency>
+                <groupId>com.github.stuxuhai</groupId>
+                <artifactId>jpinyin</artifactId>
+                <version>${jpinyin.version}</version>
+            </dependency>
 
             <!-- 测试包 -->
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>4.13.1</version>
+                <version>${junit.version}</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
