--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <java.version>1.8</java.version>
         <kdla.framework.version>1.0.0-SNAPSHOT</kdla.framework.version>
         <junit.version>4.13.1</junit.version>
+        <hsweb.framework.version>4.0.12</hsweb.framework.version>
     </properties>
 
     <distributionManagement>
@@ -127,6 +128,12 @@
 
             <dependency>
                 <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-redis</artifactId>
+                <version>${spring.boot.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-websocket</artifactId>
                 <version>${spring.boot.version}</version>
             </dependency>
@@ -135,6 +142,18 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
                 <version>${spring.boot.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.hswebframework.web</groupId>
+                <artifactId>hsweb-commons-crud</artifactId>
+                <version>${hsweb.framework.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.hswebframework.web</groupId>
+                <artifactId>hsweb-starter</artifactId>
+                <version>${hsweb.framework.version}</version>
             </dependency>
 
 
